# neo

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md
compiler/: neo_lex.c  neo_lexer.cpp  neo_lexer.hpp  simdutf.cpp  simdutf.h
docs/: grammar.md  instructions.ods  instructions.xlsx
driver/: neo_driver.c
examples/: code_uni_assessment.neo  factorial.neo  hello_world.neo  temp.neo
ext/googletest/docs/: advanced.md
ext/graphviz/: CHANGELOG.md  CMakeLists.txt  configure.ac
ext/graphviz/ci/: clang_format.py
ext/graphviz/cmake/: config_checks.cmake
ext/graphviz/cmd/mingle/: minglemain.cpp
ext/graphviz/cmd/tools/: bcomps.c  ccomps.c  dijkstra.c  gc.c  gv2gxl.c  gvcolor.c  gvpack.cpp  sccmap.c
ext/graphviz/contrib/prune/: prune.c
ext/graphviz/doc/libgraph/: sccmap.c
ext/graphviz/lib/ast/: CMakeLists.txt
ext/graphviz/lib/cgraph/: CMakeLists.txt  Makefile.am  attr.c  cghdr.h  cgraph.h  cgraph.vcxproj  cgraph.vcxproj.filters  graph.c  obj.c  pend.c
ext/graphviz/lib/expr/: CMakeLists.txt  exeval.c  exlib.h
ext/graphviz/lib/gvpr/: compile.c
ext/graphviz/lib/mingle/: agglomerative_bundling.cpp
ext/graphviz/lib/neatogen/: neatoinit.c
ext/graphviz/lib/ortho/: ortho.c
ext/graphviz/lib/pack/: ccomps.c  pack.c  pack.h
ext/graphviz/lib/rbtree/: CMakeLists.txt
ext/graphviz/lib/sfdpgen/: sfdpinit.c
ext/graphviz/lib/sfio/: CMakeLists.txt  sfvscanf.c
ext/graphviz/lib/vpsc/: block.cpp  block.h  solve_VPSC.cpp
ext/graphviz/plugin/: CMakeLists.txt
ext/graphviz/plugin/core/: gvloadimage_core.c  gvrender_core_json.c
ext/graphviz/plugin/devil/: CMakeLists.txt
ext/graphviz/plugin/gdk/: CMakeLists.txt
ext/graphviz/plugin/gs/: CMakeLists.txt
ext/graphviz/plugin/kitty/: CMakeLists.txt
ext/graphviz/plugin/poppler/: CMakeLists.txt
ext/graphviz/plugin/rsvg/: CMakeLists.txt
ext/graphviz/plugin/vt/: CMakeLists.txt
ext/graphviz/plugin/webp/: CMakeLists.txt
ext/graphviz/tests/: 1622_1.dot  CMakeLists.txt  edgepath_test.txt  gradient_test.txt  imagepath_test.txt
ext/graphviz/tests/regression_tests/large/: long_chain
ext/graphviz/windows/dependencies/graphviz-build-utilities/: README.md
ext/graphviz/windows/dependencies/graphviz-build-utilities/NSIS/Stubs/: bzip2-x86-ansi  bzip2-x86-unicode  bzip2_solid-x86-ansi  bzip2_solid-x86-unicode  lzma-x86-ansi  lzma-x86-unicode  lzma_solid-x86-ansi  lzma_solid-x86-unicode  zlib-x86-ansi  zlib-x86-unicode  zlib_solid-x86-ansi  zlib_solid-x86-unicode
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/: .packlist  Config.pm  Config_heavy.pl  DynaLoader.pm  Errno.pm  perllocal.pod
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/CORE/: BuildInfo.h  config.h  win32.h
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/ExtUtils/: MM_Any.pm  MM_Unix.pm  MakeMaker.pm
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/ExtUtils/Liblist/: Kid.pm
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/Storable/: Limit.pm
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/XML/SAX/: ParserDetails.ini
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/auto/DBI/: .packlist
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/auto/Digest/: .packlist
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/auto/SelfLoader/: .packlist
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/auto/if/: .packlist
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/lib/unicore/To/: Vo.pl  _PerlSCX.pl
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/site/lib/ActiveState/: RelocateTree.pm
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/site/lib/Net/: libnet.cfg
ext/graphviz/windows/dependencies/graphviz-build-utilities/Perl64/site/lib/common/: sense.pm
ext/graphviz/windows/dependencies/libraries/: README.md
ext/graphviz/windows/dependencies/libraries/vcpkg/installed/vcpkg/info/: getopt-win32_0.1_x64-windows.list  getopt-win32_0.1_x86-windows.list  getopt_0_x64-windows.list  getopt_0_x86-windows.list
ext/graphviz/windows/dependencies/libraries/vcpkg/installed/x64-windows/lib/: getopt.lib
flamebit/: neort_bc.h
fuzz/: dict.txt  fuzzer.cpp
miniai/: perceptron.neo
runtime/: neort_bc.c
scripts/: build_neo_core_release.sh
src/: neo_ai.c  neo_ai.h  neo_amd64.h  neo_ast.c  neo_ast.h  neo_bc.c  neo_bc.h  neo_blobs.c  neo_codegen.c  neo_codegen.h  neo_compiler.c  neo_compiler.h  neo_compiler.hpp  neo_core.c  neo_core.h  neo_datamodel.c  neo_datamodel.h  neo_emit_amd64.h  neo_gc.c  neo_gc.h  neo_lex.h  neo_lexer.c  neo_lexer.cpp  neo_lexer.h  neo_lexer.hpp  neo_object.c  neo_parser.c  neo_parser.h  neo_utils.c  neo_utils.h  neo_vm.c  neo_vm.h  neo_vm_core.c
std/core/: console.neo  float.neo  int.neo
std/io/: console.neo
test/: neo_ai.cpp  neo_amd64.cpp  neo_ast.cpp  neo_ast_helpers.c  neo_bc.cpp  neo_compiler.cpp  neo_core.cpp  neo_gc.cpp  neo_lexer.cpp  neo_parser.cpp  neo_parser_ac.cpp  neo_parser_astgen.cpp  neo_utils.cpp  neo_vm.cpp  neo_vm_routines.cpp
test/compiler/: lexer.cpp
test/files/: hallöchen.neo  simple.neo  test.neo  test_small.neo  特羅洛洛.neo
test/files/parser/accept/: class.neo  class_variable.neo  expression.neo  global_method.neo  global_stmt.neo  global_var.neo  method.neo
test/files/parser/astgen/: empty.neo.json  global_var.neo  global_var.neo.json
test/files/parser/reject/: class_2.neo  class_double_end.neo  class_no_ident.neo  class_no_newline.neo  global_method.neo  method_missing_end.neo
test/files/semantic/accept/: scope_local.neo  vars.neo
test/files/semantic/reject/: var_redef_class.neo  var_redef_global.neo  var_redef_global_to_class.neo  var_redef_global_to_param.neo  var_redef_local.neo  var_redef_param.neo  var_redef_param_to_local.neo
test/runtime/: neort_bc.cpp
tools/: extension-setup.sh  gen_frozen_blobs.sh  license_blob.h  license_blob.sh  linux_setup_core.sh  linux_setup_full.sh
(+390 files in other folders)
